--- a/pwa-app/react-calendar-frontend/public/manifest.json
+++ b/pwa-app/react-calendar-frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "Workbox PWA",
   "icons": [
     {
       "src": "favicon.ico",
